--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,7 +1,4 @@
-/* Styles go here */
-body {
-  height: 100vh;
-  width: 100vw;
+.content {
   display: flex;
   justify-content: center;
   align-items: center;
